OP-1501 Width property added to tooltip to prevent it being too long

--- a/web-app/js-lib/ext-4.0.7/resources/themes/stylesheets/ext4/default/widgets/_qtip.scss
+++ b/web-app/js-lib/ext-4.0.7/resources/themes/stylesheets/ext4/default/widgets/_qtip.scss
@@ -3,6 +3,7 @@
         position: absolute;
         overflow: visible; /*pointer needs to be able to stick out*/
         border-color: $tip-border-color;
+        width: 235px;
 
         .#{$prefix}tip-header {
             .#{$prefix}box-item {
